<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/appbackground"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.nuffsaidm8.languagevocablearner.LoadupActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Welcome"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#2BFF84"
        android:textSize="75sp"
        android:gravity="center"
        android:singleLine="true"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterNewVocab"
        android:id="@+id/enterVocab"
        android:width="180dp"
        android:background="@drawable/loadup_button_1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@+id/selectWhatYouWantToDo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckVocab"
        android:id="@+id/checkVocab"
        android:width="180dp"
        android:background="@drawable/loadup_button_1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/enterVocab"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectwhatyouwanttodo"
        android:id="@+id/selectWhatYouWantToDo"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="#2BFF84"
        android:textStyle="bold"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsName"
        android:id="@+id/toSettingsButton"
        android:width="180dp"
        android:background="@drawable/loadup_button_1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/checkVocab"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchdatabase"
        android:id="@+id/goToSearchWords"
        android:width="180dp"
        android:background="@drawable/loadup_button_1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:onClick="goToSearch"
        android:layout_below="@+id/toSettingsButton"
        android:layout_alignLeft="@+id/toSettingsButton"
        android:layout_alignStart="@+id/toSettingsButton"
        android:layout_marginTop="20dp" />

</RelativeLayout>
