<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.nuffsaidm8.languagevocablearner.CheckVocabActivity"
    android:background="@drawable/appbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trans"
        android:id="@+id/translateHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/currentWordDisplay"
        android:layout_marginTop="28dp"
        android:text="Medium Text"
        android:layout_below="@+id/translateHeader"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/translationfield"
        android:layout_marginTop="24dp"
        android:width="200dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/currentWordDisplay"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:backgroundTint="#ffffff" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:id="@+id/skipBtn"
        android:onClick="skip"
        android:background="@drawable/loadup_button_1"
        android:layout_below="@+id/check"
        android:layout_alignLeft="@+id/homeButtonCheck"
        android:layout_alignStart="@+id/homeButtonCheck"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hintLabel"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:layout_below="@+id/translationfield"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/hintShower"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/togglehint"
        android:id="@+id/showHintBtn"
        android:onClick="showHint"
        android:background="@drawable/loadup_button_1"
        android:layout_below="@+id/hintShower"
        android:layout_alignLeft="@+id/check"
        android:layout_alignStart="@+id/check"
        android:layout_marginTop="35dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/homeButtonCheck"
        android:onClick="home"
        android:background="@drawable/loadup_button_1"
        android:layout_below="@+id/skipBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/check"
        android:onClick="checkAnswerClicked"
        android:background="@drawable/loadup_button_1"
        android:layout_below="@+id/showHintBtn"
        android:layout_alignLeft="@+id/skipBtn"
        android:layout_alignStart="@+id/skipBtn"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" />

</RelativeLayout>
